size for a cell phone,

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <body>
     <div class="container">
         <header>
-			<h1><span>rogue</span> pickings</h1>
+			<h1><span>rogue</span> pickings</h1>			
             <nav>
-				
                 <ul>
                     <li>
                         <a href="">About</a>
@@ -56,15 +55,15 @@
             <div class="section-one">
                 <h3>Today's Specials</h3>
                 <ul class="menu">
-                    <li>Flaming Hummus &amp; Falafel Salad</li>
-                    <li>Sizzling Bean Burrito</li>
-                    <li>Green Gloves Tamales</li>
+					<li>Flaming Hummus &amp; Falafel Salad</li>
+					<li>Sizzling Bean Burrito</li>
+                   <li>Green Gloves Tamales</li>
                 </ul>
             </div>
             <div class="section-two">
                 <h3>Our Awesome Reviews</h3>
                 <p class="reviews">"I got so excited about the yumminess of the falafel salad that I am typing this
-                    review as I inhale my lunch. Yes it is that good.... Service was super friendly and quick. Can't
+                    review as I inhale my lunch. Yes it is that good. Service was super friendly and quick. Can't
                     wait see you Rogue Pickings again tomorrow!"</p>
             </div>
             <div class="section-three">
