Fixing alignment for the bottom section, moved navigation bar over to the left, and widden picture.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 		
 	  <section class="top-section">
      	<div class="main-image">
-			<img src="img/download.jpg" alt="green beans" />
+			<figure>
+				<img src="img/download.jpg" alt="green beans" />
+			</figure>	
 		 </div>
 		 
             <div class="main-title">
